<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_username"
        android:layout_width="351dp"
        android:alpha="0"
        tools:alpha="100"
        android:layout_height="54dp"
        android:layout_marginTop="88dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/ed_register_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/ed_username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_username">


    <com.example.shara.customview.EmailCustomEditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/ed_email"
        android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">
        
        <com.example.shara.customview.PasswordCustomView
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="@string/ed_password"
            android:ems="10"
            android:inputType="textPassword"
           />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonForRegister"
        android:layout_width="351dp"
        android:layout_height="58dp"
        android:layout_marginTop="592dp"
        android:alpha="0"
        tools:alpha="100"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>